# Terrace-Dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt
Terrace-Svelte/: .gitignore  index.html  package-lock.json  package.json
Terrace-Svelte/public/: global.css
Terrace-Svelte/src/: App.svelte  bookmarksStore.js  notesStore.js  stores.js
Terrace-kit/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
Terrace-kit/src/: app.css
Terrace-kit/src/lib/: Bookmarks.svelte  NavBar.svelte  Search.svelte  Services.svelte  Weather.svelte  stores.js  (+2 more)
Terrace-kit/static/: tab.gltf
client/: exampleService.py  example_client.py  hardware_client.py
clients/: example_service.py  hardware_client.py  stats.py
clients/ComputerClient/: a.py  client.py
logs/: readme.txt
server/: data_handling.py  handlers.py  main.py  pepper.py
server/debug/: debugger.py  readme.md
server/static/: app.css  config.js  home.css  home.js  scripts.js  weatherAPI-ignore.js
server/templates/: index.html  notes.html
server/tests/: test_main.py
static/: home.css  home.js  scripts.js  weatherAPI.js
templates/: index.html
terrace_dashboard/: main.py
terrace_dashboard/static/: home.css  home.js  scripts.js  weatherAPI.js
terrace_dashboard/templates/: index.html
terrace_dashboard/utilities/: handlers.py  stats.py
tests/: test_main.py
tests/test_utilities/: test_handlers.py  test_stats.py
utilities/: clients.py  connection_manager.py  handlers.py
(+64 files in other folders)
